# Sahara

./: .gitignore  CMakeLists.txt  README.md  Sahara.pro  Sahara_global.h  sahara.cpp  sahara.h  shaders-spirv.qrc  shaders.qrc  vulkanutil.cpp  vulkanutil.h
common/: transform.cpp  transform.h  volume.cpp  volume.h
example/ModelWidgetExample/: CMakeLists.txt  ModelWidgetExample.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  models.qrc
example/ModelWidgetExample/models/: chibi.dae  scorpion.dae  tree.dae
example/build-ModelWidgetExample-Desktop-Debug/: Makefile  ModelWidgetExample  moc_mainwindow.cpp  moc_predefs.h  qrc_models.cpp  ui_mainwindow.h
gl/: vertexbuffer.cpp  vertexbuffer.h
json/: json.cpp  json.h
panel/: fpspanel.cpp  fpspanel.h  panel.cpp  panel.h
pipelines/: animatedpipeline.cpp  animatedpipeline.h  displaypipeline.cpp  displaypipeline.h  gridpipeline.cpp  gridpipeline.h  panelpipeline.cpp  panelpipeline.h  pipeline.cpp  pipeline.h  scenepipeline.cpp  scenepipeline.h
programs/: displayprogram.cpp  displayprogram.h  gridprogram.cpp  gridprogram.h  program.cpp  program.h  sceneprogram.cpp  sceneprogram.h
programs/glsl/: animated.vert  display.frag  display.fsh  display.vert  display.vsh  grid.fsh  grid.vert  grid.vsh  scene.frag  scene.fsh  scene.vert  scene.vsh
programs/glsl/120/: display.fsh  display.vsh  grid.frag.glsl  grid.vsh  scene.frag.glsl  scene.vert.glsl
programs/glsl/300/: display.vsh  grid.frag.glsl  scene.fsh
programs/glsl/450/: display.vert.glsl  grid.frag.glsl  panel.frag.glsl  panel.vert.glsl  scene.frag.glsl  scene.vert.glsl
programs/spir-v/: animated.vert.spv  display.frag.spv  display.vert.spv  grid.frag.spv  grid.vert.spv  panel.frag.spv  panel.vert.spv  scene.frag.spv  scene.vert.spv
render/: openglrenderer.cpp  openglrenderer.h  openglvertexbuffer.cpp  openglvertexbuffer.h  openglwithvertexbuffers.cpp  openglwithvertexbuffers.h  renderer.cpp  renderer.h  vertexbuffer.cpp  vertexbuffer.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanvertexbuffer.cpp  vulkanvertexbuffer.h  vulkanwithuniform.cpp  vulkanwithuniform.h  vulkanwithvertexbuffers.cpp  vulkanwithvertexbuffers.h  withuniform.cpp  withuniform.h  withvertexbuffers.cpp  withvertexbuffers.h
render/display/: cameradisplay.cpp  cameradisplay.h  display.cpp  display.h  openglcameradisplay.cpp  openglcameradisplay.h  opengldisplay.h  openglpointlightdisplay.cpp  openglpointlightdisplay.h  pointlightdisplay.cpp  pointlightdisplay.h  vulkancameradisplay.cpp  vulkancameradisplay.h  vulkandisplay.h  vulkanpointlightdisplay.cpp  vulkanpointlightdisplay.h
render/grid/: axis.cpp  axis.h  grid.cpp  grid.h  openglaxis.cpp  openglaxis.h  openglgrid.cpp  openglgrid.h  vulkanaxis.cpp  vulkanaxis.h  vulkangrid.cpp  vulkangrid.h
scene/: model.cpp  model.h  openglmodel.cpp  openglmodel.h  openglscene.cpp  openglscene.h  scene.cpp  scene.h  vulkanmodel.cpp  vulkanmodel.h  vulkanscene.cpp  vulkanscene.h
scene/asset/: animation.cpp  animation.h  animationclip.cpp  animationclip.h  armature.cpp  armature.h  asset.cpp  asset.h  bone.cpp  bone.h  camera.cpp  camera.h  controller.cpp  controller.h  image.cpp  image.h  joint.cpp  joint.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  openglimage.cpp  openglimage.h  openglmaterial.cpp  openglmaterial.h  pointlight.cpp  pointlight.h  surface.cpp  surface.h  vulkanimage.cpp  vulkanimage.h  vulkanmaterial.cpp  vulkanmaterial.h
scene/asset/light/: ambientlight.cpp  ambientlight.h  light.cpp  light.h  pointlight.cpp  pointlight.h
scene/asset/mesh/: mesh.cpp  mesh.h  openglmesh.cpp  openglmesh.h  openglsurface.cpp  openglsurface.h  source.cpp  source.h  surface.cpp  surface.h  vulkanmesh.cpp  vulkanmesh.h  vulkansurface.cpp  vulkansurface.h
scene/instance/: controllerinstance.cpp  controllerinstance.h  instance.cpp  instance.h  instancecontroller.cpp  instancecontroller.h  instancemesh.cpp  instancemesh.h  meshinstance.cpp  meshinstance.h  openglinstancecontroller.cpp  openglinstancecontroller.h  vulkaninstancecontroller.cpp  vulkaninstancecontroller.h
scene/node/: node.cpp  node.h  nodeitem.cpp  nodeitem.h  volume.cpp  volume.h
widgets/: modelwidget.cpp  modelwidget.h  modelwidget.ui  scenewidget.cpp  scenewidget.h
widgets/scenewidget/: cameracontrol.cpp  cameracontrol.h  openglscenewidget.cpp  openglscenewidget.h  scenewidget.cpp  scenewidget.h  scenewidget_old.cpp  scenewidget_old.h  scenewindow.cpp  scenewindow.h  vulkanscenewidget.cpp  vulkanscenewidget.h  vulkanscenewindow.cpp  vulkanscenewindow.h
